third_party/move/move-compiler-v2/tests/visibility-checker/public_package_fun_in_script.exp

Diagnostics:
error: unnecessary or extraneous item
  ┌─ tests/visibility-checker/public_package_fun_in_script.move:2:5
  │
2 │     public(package) fun main() {}
  │     ^^^^^^^^^^^^^^^ Invalid 'public(package)' visibility modifier. Script functions are not callable from other Move functions.
