third_party/move/move-compiler-v2/tests/visibility-checker/public_package_fun_in_script.move
script {
    public(package) fun main() {}
}
